Fix Align / Valign location clamping